--- a/rjc_account_form/static/scss/style_withholding_tax_cert.scss
+++ b/rjc_account_form/static/scss/style_withholding_tax_cert.scss
@@ -124,19 +124,185 @@
         top: 616px;
         right: 69px;
     }
+    .type_4A_date {
+        position: fixed;
+        top: 642px;
+        right: 381px;
+    }
+    .type_4A_base {
+        position: fixed;
+        top: 642px;
+        right: 205px;
+    }
+    .type_4A_tax {
+        position: fixed;
+        top: 642px;
+        right: 69px;
+    }
+    .type_4B11_date {
+        position: fixed;
+        top: 753px;
+        right: 381px;
+    }
+    .type_4B11_base {
+        position: fixed;
+        top: 753px;
+        right: 205px;
+    }
+    .type_4B11_tax {
+        position: fixed;
+        top: 753px;
+        right: 69px;
+    }
+    .type_4B12_date {
+        position: fixed;
+        top: 780px;
+        right: 381px;
+    }
+    .type_4B12_base {
+        position: fixed;
+        top: 780px;
+        right: 205px;
+    }
+    .type_4B12_tax {
+        position: fixed;
+        top: 780px;
+        right: 69px;
+    }
+    .type_4B13_date {
+        position: fixed;
+        top: 808px;
+        right: 381px;
+    }
+    .type_4B13_base {
+        position: fixed;
+        top: 808px;
+        right: 205px;
+    }
+    .type_4B13_tax {
+        position: fixed;
+        top: 808px;
+        right: 69px;
+    }
+    .type_4B14_description {
+        position: fixed;
+        box-sizing: content-box;
+        width: 300px;
+        height: 40px;
+        top: 835px;
+        left: 325px;
+    }
+    .type_4B14_date {
+        position: fixed;
+        top: 836px;
+        right: 381px;
+    }
+    .type_4B14_base {
+        position: fixed;
+        top: 836px;
+        right: 205px;
+    }
+    .type_4B14_tax {
+        position: fixed;
+        top: 836px;
+        right: 69px;
+    }
+    .type_4B21_date {
+        position: fixed;
+        top: 890px;
+        right: 381px;
+    }
+    .type_4B21_base {
+        position: fixed;
+        top: 890px;
+        right: 205px;
+    }
+    .type_4B21_tax {
+        position: fixed;
+        top: 890px;
+        right: 69px;
+    }
+    .type_4B22_date {
+        position: fixed;
+        top: 945px;
+        right: 381px;
+    }
+    .type_4B22_base {
+        position: fixed;
+        top: 945px;
+        right: 205px;
+    }
+    .type_4B22_tax {
+        position: fixed;
+        top: 945px;
+        right: 69px;
+    }
+    .type_4B23_date {
+        position: fixed;
+        top: 1000px;
+        right: 381px;
+    }
+    .type_4B23_base {
+        position: fixed;
+        top: 1000px;
+        right: 205px;
+    }
+    .type_4B23_tax {
+        position: fixed;
+        top: 1000px;
+        right: 69px;
+    }
+    .type_4B24_date {
+        position: fixed;
+        top: 1030px;
+        right: 381px;
+    }
+    .type_4B24_base {
+        position: fixed;
+        top: 1030px;
+        right: 205px;
+    }
+    .type_4B24_tax {
+        position: fixed;
+        top: 1030px;
+        right: 69px;
+    }
+    .type_4B25_description {
+        position: fixed;
+        box-sizing: content-box;
+        width: 350px;
+        height: 40px;
+        top: 1056px;
+        left: 290px;
+    }
+    .type_4B25_date {
+        position: fixed;
+        top: 1056px;
+        right: 381px;
+    }
+    .type_4B25_base {
+        position: fixed;
+        top: 1056px;
+        right: 205px;
+    }
+    .type_4B25_tax {
+        position: fixed;
+        top: 1056px;
+        right: 69px;
+    }
     .type_5_date {
         position: fixed;
-        top: 1100px;
+        top: 1167px;
         right: 381px;
     }
     .type_5_base {
         position: fixed;
-        top: 1100px;
+        top: 1167px;
         right: 205px;
     }
     .type_5_tax {
         position: fixed;
-        top: 1100px;
+        top: 1167px;
         right: 69px;
     }
     .type_6_description {
