--- a/rjc_account_form/reports/wht_cert_layout.xml
+++ b/rjc_account_form/reports/wht_cert_layout.xml
@@ -62,6 +62,15 @@
             <t t-if="o.income_tax_form == 'pnd1'">
                 <p class="choice_pnd1a">X</p>
             </t>
+            <t t-if="o.income_tax_form == 'pnd1s'">
+                <p class="choice_pnd1s">X</p>
+            </t>
+            <t t-if="o.income_tax_form == 'pnd2'">
+                <p class="choice_pnd2">X</p>
+            </t>
+            <t t-if="o.income_tax_form == 'pnd2a'">
+                <p class="choice_pnd2a">X</p>
+            </t>
             <t t-if="o.income_tax_form == 'pnd3'">
                 <p class="choice_pnd3">X</p>
             </t>
@@ -206,6 +215,22 @@
                         <t t-esc="'{0:,.2f}'.format(line_id.amount)" />
                     </p>
                 </t>
+                <t t-if="line_id.wt_cert_income_type == '6'">
+                    <p class="type_6_description">
+                        <t
+                            t-esc="o._compute_desc_type_other(o.wt_line, 'wt_cert_income_desc', '6')"
+                        />
+                    </p>
+                    <p class="type_6_date">
+                        <t t-esc="date" />
+                    </p>
+                    <p class="type_6_base">
+                        <t t-esc="'{0:,.2f}'.format(line_id.base)" />
+                    </p>
+                    <p class="type_6_tax">
+                        <t t-esc="'{0:,.2f}'.format(line_id.amount)" />
+                    </p>
+                </t>
             </t>
             
             <!-- support multi line in type 5 -->
@@ -226,12 +251,6 @@
                 </t>
             </span>
             <!-- check in line type other (6, 7, 8) -->
-            <t t-if="o._compute_sum_type_other(o.wt_line, 'base')">
-                <p class="type_6_description"><t t-esc="o._compute_desc_type_other(o.wt_line, 'wt_cert_income_desc')"/></p>
-                <p class="type_6_date"><t t-esc="date"/></p>
-                <p class="type_6_base"><t t-esc="'{0:,.2f}'.format(o._compute_sum_type_other(o.wt_line, 'base'))"/></p>
-                <p class="type_6_tax"><t t-esc="'{0:,.2f}'.format(o._compute_sum_type_other(o.wt_line, 'amount'))"/></p>
-            </t>
 
             <t t-set="total_amount_base" t-value="sum(o.wt_line.mapped('base'))"/>
             <t t-set="total_amount_tax" t-value="sum(o.wt_line.mapped('amount'))"/>
