--- a/rjc_account_form/static/scss/style_withholding_tax_cert.scss
+++ b/rjc_account_form/static/scss/style_withholding_tax_cert.scss
@@ -61,6 +61,24 @@
         left: 416px;
         font-size: 28px;
     }
+    .choice_pnd1s {
+        position: fixed;
+        top: 428px;
+        right: 565px;
+        font-size: 28px;
+    }
+    .choice_pnd2 {
+        position: fixed;
+        top: 428px;
+        right: 360px;
+        font-size: 28px;
+    }
+    .choice_pnd2a {
+        position: fixed;
+        top: 463px;
+        left: 416px;
+        font-size: 28px;
+    }
     .choice_pnd3 {
         position: fixed;
         top: 428px;
